// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows escaped period 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassTypes = \\"\\" | \\"px-1.5\\""
`;

exports[`comma 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassTypes = \\"\\""
`;

exports[`does not include ids, pseudo selectors, or attributes 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassTypes = \\"\\" | \\"mt-1\\" | \\"mt-2\\""
`;

exports[`generates types for classes 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassTypes = \\"\\" | \\"mt-1\\" | \\"mt-2\\""
`;

exports[`groups 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassTypes = \\"\\" | \\"group\\" | \\"group-hover:text-gray-900\\""
`;

exports[`space 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassTypes = \\"\\" | \\"space-y-2\\""
`;

exports[`supports custom directories 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassTypes = \\"\\" | \\"mt-1\\" | \\"mt-2\\""
`;
